Fix issue with horizontal scroll bar always on

--- a/devtools/default.css
+++ b/devtools/default.css
@@ -289,7 +289,6 @@ a:visited {
 .row {
 	display: flex;
 	flex-flow: row wrap;
-	margin: 0 -10px;
 	margin-bottom: 0px;
 }
 .rowFixTop {
@@ -353,7 +352,7 @@ td {
 	[class*="col-"] {
 		margin-right: 0px;
 		float: left;
-		padding: 20px 12px 0;
+		padding: 30px 12px 0;
 		display: table-cell;
 		vertical-align: middle;
 		background-color: #2F2F2F;
